Version 1.0.34(Build 2022021400)
- Added duplicate feature
- Added a 3rd prompt/response option textprompt and changed sequence in UI. (update.php rewrites existing qs to match)

Version 1.0.33(Build 2022020800)
- Added open and close start dates

Version 1.0.32(Build 2022020300)
- Fixed broken new item saving when not using Japanese on qs with speech recognition
- Added Youtube Clip content type

Version 1.0.31(Build 2022012500)
- Added missing number/alphabet processing class

Version 1.0.30(Build 2022012001)
- Added ShortAnswer question type
- Added TTS Autoplay
- Added Layout option
- added credential fetching

Version 1.0.29(Build 2021112100)
- Added neural voices
- Added ability to force Poodll STT
- Added ignore punctuation mode to dictation
- Fixed browser speech recognition on Safari

Version 1.0.28 (Build 2021082700)
- Better phonetic comparisons

Version 1.0.27 (Build 2021081800)
- Fixed array key exists on php8

Version 1.0.26 (Build 2021063000)
- Fixed media prompt html editor that would not hide

Version 1.0.25 (Build 2021053100)
- Set internal flag for iframe use

Version 1.0.24 (Build 2021052901)
- Fixed problem with lang file generation

Version 1.0.23 (Build 2021052900)
- Added lang models for FR and ES

Version 1.0.22 (Build 2021052500)
- Added ability to view reports by group

Version 1.0.21 (Build 2021052200)
- Added an update script to fix up any broken scorer paths

Version 1.0.20 (Build 2021052000)
- added capetown and bahrain

Version 1.0.19 (Build 2021042500)
- Added multichoice with audio options
- layout improvements for multichoice

Version 1.0.18 (Build 2021041700)
- Added text block
- Added horizontal layout

Version 1.0.17 (Build 2021041500)
- Added m4a file handler for audio
- Added experimental config to make working with experimental types easier
- Added multichoice audio answer

Version 1.0.16 (Build 2021033000)
- fixed bug in backup/restore of user attempts
- fixed bug in reset of user attempts