@@ -52,6 +52,7 @@ $string['name']='Name';
 $string['timecreated']='Time Created';
 $string['basicheading']='Basic Report';
 $string['attemptsheading']='Attempts Report';
+$string['incompleteattemptsheading']='Incomplete Attempts Report';
 $string['gradereport']='Grade Report';
 $string['gradereport_explanation']='A list of grades';
 $string['gradereportheading']='Grade Report';
@@ -109,6 +110,8 @@ $string['errorheader'] = 'Error';
 $string['uploadconverterror'] = 'An error occured while posting your file to the server. Your submission has NOT been received. Please refresh the page and try again.';
 $string['attemptsreport'] = 'Attempts Report';
 $string['attemptsreport_explanation']='A list of attempts';
+$string['incompleteattemptsreport'] = 'Incomplete Attempts Report';
+$string['incompleteattemptsreport_explanation']='A list of incomplete attempts';
 $string['submitted'] = 'submitted';
 $string['id'] = 'ID';
 $string['username'] = 'User';
@@ -532,5 +535,7 @@ $string['ytclipdetails'] = "Youtube Clip";
 $string['itemytid'] = "Youtube Video ID";
 $string['itemytstart'] = "Start Secs";
 $string['itemytend'] = "End Secs";
+$string['itemscomplete'] = "Items Complete";
+
 
 
